created a new page

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,7 +5,7 @@
     <title>hi</title>
     <p>Name: Ashraf Mugalli</p>
     <p>Course: IS-117</p>
-    <p></p>
+    <p>Intro to website development</p>
     <p></p>
 
 </head>
