--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>hi</title>
     <p>Name: Ashraf Mugalli</p>
-    <p>Course: IS-117</p>
+    <p>Course: IS-117-102</p>
     <p>Intro to website development</p>
     <p></p>
 
